bk_ida/gccida/g2/copy_blkmode_from_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2644:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2654:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2677:36: error: invalid suffix 'xmode' on integer constant
srcreg = convert_modes( *(short *)0xmode, VOIDmode, srcreg, ( *( ( _BYTE *)&type->block.common + 17) & 0x20) != 0); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2702:30: error: invalid suffix 'orce' on integer constant
v8 = operand_sub*(short *)0xforce( srcreg, v10 / v11, ( machine_mode)*( ( unsigned __int8 *)srcreg + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2702:57: error: use of undeclared identifier 'machine_mode'
v8 = operand_sub*(short *)0xforce( srcreg, v10 / v11, ( machine_mode)*( ( unsigned __int8 *)srcreg + 2)); 
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2702:6: error: use of undeclared identifier 'operand_sub'
v8 = operand_sub*(short *)0xforce( srcreg, v10 / v11, ( machine_mode)*( ( unsigned __int8 *)srcreg + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2714:18: error: invalid suffix 'xmode' on integer constant
v12 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2720:18: error: invalid suffix 'xmode' on integer constant
v12 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/expr.c:2731:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_blkmode_from_reg/src/obj/expr.o] Error 1
